5report/6の完成版/parser.output
   0  $accept : %entry% $end

   1  toplevel : syntaxexpression SEMISEMI
   2           | letexpression

   3  letexpression : LET var EQ boolian_expr letexpression
   4                | LET var EQ boolian_expr SEMISEMI

   5  syntaxexpression : LET var EQ boolian_expr IN boolian_expr
   6                   | IF boolian_expr THEN boolian_expr ELSE boolian_expr
   7                   | boolian_expr

   8  boolian_expr : boolian_expr OR factor2_expr
   9               | factor2_expr

  10  factor2_expr : factor2_expr AND expr
  11               | expr

  12  expr : arith_expr EQ arith_expr
  13       | arith_expr LT arith_expr
  14       | arith_expr

  15  arith_expr : arith_expr PLUS factor_expr
  16             | arith_expr MINUS factor_expr
  17             | factor_expr

  18  factor_expr : factor_expr TIMES atomic_expr
  19              | factor_expr DIV atomic_expr
  20              | atomic_expr

  21  atomic_expr : INT
  22              | BOOL
  23              | ID
  24              | LPAR expr RPAR

  25  var : ID

  26  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	.  error

	toplevel  goto 9
	syntaxexpression  goto 10
	letexpression  goto 11
	boolian_expr  goto 12
	factor2_expr  goto 13
	expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (21)

	.  reduce 21


state 4
	atomic_expr : BOOL .  (22)

	.  reduce 22


state 5
	atomic_expr : ID .  (23)

	.  reduce 23


state 6
	letexpression : LET . var EQ boolian_expr letexpression  (3)
	letexpression : LET . var EQ boolian_expr SEMISEMI  (4)
	syntaxexpression : LET . var EQ boolian_expr IN boolian_expr  (5)

	ID  shift 18
	.  error

	var  goto 19


state 7
	syntaxexpression : IF . boolian_expr THEN boolian_expr ELSE boolian_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	boolian_expr  goto 20
	factor2_expr  goto 13
	expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 8
	atomic_expr : LPAR . expr RPAR  (24)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	expr  goto 21
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 9
	%entry% : '\001' toplevel .  (26)

	.  reduce 26


state 10
	toplevel : syntaxexpression . SEMISEMI  (1)

	SEMISEMI  shift 22
	.  error


state 11
	toplevel : letexpression .  (2)

	.  reduce 2


state 12
	syntaxexpression : boolian_expr .  (7)
	boolian_expr : boolian_expr . OR factor2_expr  (8)

	OR  shift 23
	SEMISEMI  reduce 7


state 13
	boolian_expr : factor2_expr .  (9)
	factor2_expr : factor2_expr . AND expr  (10)

	AND  shift 24
	LET  reduce 9
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	SEMISEMI  reduce 9
	OR  reduce 9


state 14
	factor2_expr : expr .  (11)

	.  reduce 11


state 15
	expr : arith_expr . EQ arith_expr  (12)
	expr : arith_expr . LT arith_expr  (13)
	expr : arith_expr .  (14)
	arith_expr : arith_expr . PLUS factor_expr  (15)
	arith_expr : arith_expr . MINUS factor_expr  (16)

	PLUS  shift 25
	MINUS  shift 26
	EQ  shift 27
	LT  shift 28
	LET  reduce 14
	IN  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14
	AND  reduce 14
	OR  reduce 14


state 16
	arith_expr : factor_expr .  (17)
	factor_expr : factor_expr . TIMES atomic_expr  (18)
	factor_expr : factor_expr . DIV atomic_expr  (19)

	TIMES  shift 29
	DIV  shift 30
	LET  reduce 17
	IN  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17
	AND  reduce 17
	OR  reduce 17


state 17
	factor_expr : atomic_expr .  (20)

	.  reduce 20


state 18
	var : ID .  (25)

	.  reduce 25


state 19
	letexpression : LET var . EQ boolian_expr letexpression  (3)
	letexpression : LET var . EQ boolian_expr SEMISEMI  (4)
	syntaxexpression : LET var . EQ boolian_expr IN boolian_expr  (5)

	EQ  shift 31
	.  error


state 20
	syntaxexpression : IF boolian_expr . THEN boolian_expr ELSE boolian_expr  (6)
	boolian_expr : boolian_expr . OR factor2_expr  (8)

	THEN  shift 32
	OR  shift 23
	.  error


state 21
	atomic_expr : LPAR expr . RPAR  (24)

	RPAR  shift 33
	.  error


state 22
	toplevel : syntaxexpression SEMISEMI .  (1)

	.  reduce 1


state 23
	boolian_expr : boolian_expr OR . factor2_expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor2_expr  goto 34
	expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 24
	factor2_expr : factor2_expr AND . expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	expr  goto 35
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 25
	arith_expr : arith_expr PLUS . factor_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 36
	atomic_expr  goto 17


state 26
	arith_expr : arith_expr MINUS . factor_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 37
	atomic_expr  goto 17


state 27
	expr : arith_expr EQ . arith_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 38
	factor_expr  goto 16
	atomic_expr  goto 17


state 28
	expr : arith_expr LT . arith_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 39
	factor_expr  goto 16
	atomic_expr  goto 17


state 29
	factor_expr : factor_expr TIMES . atomic_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 40


state 30
	factor_expr : factor_expr DIV . atomic_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 41


state 31
	letexpression : LET var EQ . boolian_expr letexpression  (3)
	letexpression : LET var EQ . boolian_expr SEMISEMI  (4)
	syntaxexpression : LET var EQ . boolian_expr IN boolian_expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	boolian_expr  goto 42
	factor2_expr  goto 13
	expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 32
	syntaxexpression : IF boolian_expr THEN . boolian_expr ELSE boolian_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	boolian_expr  goto 43
	factor2_expr  goto 13
	expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 33
	atomic_expr : LPAR expr RPAR .  (24)

	.  reduce 24


state 34
	boolian_expr : boolian_expr OR factor2_expr .  (8)
	factor2_expr : factor2_expr . AND expr  (10)

	AND  shift 24
	LET  reduce 8
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	SEMISEMI  reduce 8
	OR  reduce 8


state 35
	factor2_expr : factor2_expr AND expr .  (10)

	.  reduce 10


state 36
	arith_expr : arith_expr PLUS factor_expr .  (15)
	factor_expr : factor_expr . TIMES atomic_expr  (18)
	factor_expr : factor_expr . DIV atomic_expr  (19)

	TIMES  shift 29
	DIV  shift 30
	LET  reduce 15
	IN  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	EQ  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15
	AND  reduce 15
	OR  reduce 15


state 37
	arith_expr : arith_expr MINUS factor_expr .  (16)
	factor_expr : factor_expr . TIMES atomic_expr  (18)
	factor_expr : factor_expr . DIV atomic_expr  (19)

	TIMES  shift 29
	DIV  shift 30
	LET  reduce 16
	IN  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	EQ  reduce 16
	LT  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16
	AND  reduce 16
	OR  reduce 16


state 38
	expr : arith_expr EQ arith_expr .  (12)
	arith_expr : arith_expr . PLUS factor_expr  (15)
	arith_expr : arith_expr . MINUS factor_expr  (16)

	PLUS  shift 25
	MINUS  shift 26
	LET  reduce 12
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12
	AND  reduce 12
	OR  reduce 12


state 39
	expr : arith_expr LT arith_expr .  (13)
	arith_expr : arith_expr . PLUS factor_expr  (15)
	arith_expr : arith_expr . MINUS factor_expr  (16)

	PLUS  shift 25
	MINUS  shift 26
	LET  reduce 13
	IN  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13
	AND  reduce 13
	OR  reduce 13


state 40
	factor_expr : factor_expr TIMES atomic_expr .  (18)

	.  reduce 18


state 41
	factor_expr : factor_expr DIV atomic_expr .  (19)

	.  reduce 19


state 42
	letexpression : LET var EQ boolian_expr . letexpression  (3)
	letexpression : LET var EQ boolian_expr . SEMISEMI  (4)
	syntaxexpression : LET var EQ boolian_expr . IN boolian_expr  (5)
	boolian_expr : boolian_expr . OR factor2_expr  (8)

	LET  shift 44
	IN  shift 45
	SEMISEMI  shift 46
	OR  shift 23
	.  error

	letexpression  goto 47


state 43
	syntaxexpression : IF boolian_expr THEN boolian_expr . ELSE boolian_expr  (6)
	boolian_expr : boolian_expr . OR factor2_expr  (8)

	ELSE  shift 48
	OR  shift 23
	.  error


state 44
	letexpression : LET . var EQ boolian_expr letexpression  (3)
	letexpression : LET . var EQ boolian_expr SEMISEMI  (4)

	ID  shift 18
	.  error

	var  goto 49


state 45
	syntaxexpression : LET var EQ boolian_expr IN . boolian_expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	boolian_expr  goto 50
	factor2_expr  goto 13
	expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 46
	letexpression : LET var EQ boolian_expr SEMISEMI .  (4)

	.  reduce 4


state 47
	letexpression : LET var EQ boolian_expr letexpression .  (3)

	.  reduce 3


state 48
	syntaxexpression : IF boolian_expr THEN boolian_expr ELSE . boolian_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	boolian_expr  goto 51
	factor2_expr  goto 13
	expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 49
	letexpression : LET var . EQ boolian_expr letexpression  (3)
	letexpression : LET var . EQ boolian_expr SEMISEMI  (4)

	EQ  shift 52
	.  error


state 50
	syntaxexpression : LET var EQ boolian_expr IN boolian_expr .  (5)
	boolian_expr : boolian_expr . OR factor2_expr  (8)

	OR  shift 23
	SEMISEMI  reduce 5


state 51
	syntaxexpression : IF boolian_expr THEN boolian_expr ELSE boolian_expr .  (6)
	boolian_expr : boolian_expr . OR factor2_expr  (8)

	OR  shift 23
	SEMISEMI  reduce 6


state 52
	letexpression : LET var EQ . boolian_expr letexpression  (3)
	letexpression : LET var EQ . boolian_expr SEMISEMI  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	boolian_expr  goto 53
	factor2_expr  goto 13
	expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	atomic_expr  goto 17


state 53
	letexpression : LET var EQ boolian_expr . letexpression  (3)
	letexpression : LET var EQ boolian_expr . SEMISEMI  (4)
	boolian_expr : boolian_expr . OR factor2_expr  (8)

	LET  shift 44
	SEMISEMI  shift 46
	OR  shift 23
	.  error

	letexpression  goto 47


23 terminals, 12 nonterminals
27 grammar rules, 54 states
